[package]
name = "resonators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "time", "uuid", "migrate"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.2", features = ["signal"] }
tonic = "0.11.0"
